# kennebec-monitor

./: .env.example  .gitignore  README.md  ais.py  analyze_run.py  capture.py  config.py  detector.py  main.py  notifier.py  pyproject.toml  recorder.py  requirements.txt  tracker.yaml  uploader.py
deployment/: com.kennebec-monitor.boat-detector.plist
