[project]
name = "kennebec-monitor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "numpy>=1.26.0,<2",
    "opencv-python>=4.10.0",
    "python-dotenv>=1.0.0",
    "torch>=2.0.0",
    "ultralytics>=8.4.51",
    "websockets>=12.0",
]
